processor/src/test/resources/invalid/MissingColumnAnnotation.java
package com.pwinckles.jdbcgen.processor.invalid;

import com.pwinckles.jdbcgen.JdbcGen;
import com.pwinckles.jdbcgen.JdbcGenColumn;
import com.pwinckles.jdbcgen.JdbcGenTable;

@JdbcGen
@JdbcGenTable(name = "test")
public class MissingColumnAnnotation {

    Long id;

    String value;

}
